--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
     <p>A water bottle is usually made of plastic, glass, or metal. Water bottles are available in different shapes, colors, and sizes. In the past, water bottles were sometimes made of wood, bark, or animal skins such as leather, hide and sheepskin. Water bottles can be either disposable or reusable. Reusable water bottles can also be used for liquids such as juice, iced tea, alcoholic beverages, or soft drinks. Reusable water bottles reduce plastic waste and contribute to saving environment. Easily portable, water bottles make for convenient use. Disposable water bottles often list nutrition facts.</p>
     <p>Metal water bottles are growing in popularity. Made primarily from stainless steel or aluminum, they are durable and retain minimal odor or taste from previous contents. Aluminum bottles often contain a plastic resin or epoxy liner to protect contents from taste and odor transfer.[2] Although most liners are now BPA-free, older and less expensive models can contain BPA.</p>
 
+    <h2>Why water bottles are amazing:</h2>
+    <ol>
+        <li>They keep you hydrated</li>
+        <li>You can fill them up with more water</li>
+        <li>They go whereever you go(as long as you don't forget them)</li>
+    </ol>
+
+    <h2>Why I love water bottles:</h2>
+    <p>My obsession with water bottles started from a young age.</p> 
+       <p> I used water bottles everyday when I was in preschool.</p> 
+        <p>I felt incomplete if I did not have my water bottle by my side.</p> 
+        <p>Ah yes those were the days.</p>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Sports_cap_%28bottle%29_-_open.jpg/130px-Sports_cap_%28bottle%29_-_open.jpg"/>
 </body>
 </html>
